--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "MultipleDatePickerX",
-  "version": "1.3.5",
+  "name": "multiple-date-picker-x",
+  "version": "1.0.0",
   "authors": [
     "Xal3ph <sabol.matthew@gmail.com>"
   ],
